--- a/styles.css
+++ b/styles.css
@@ -858,9 +858,11 @@ p.last-updated {
 }
 
 .creator-pic {
-    width: 100%;
-    height: 200px;
+   width: 80px;
+    height: 80px;
+    border-radius: 50%;
     object-fit: cover;
+    margin-bottom: 15px;
 }
 
 .creator-info {
